added ProposalVotingStatus
